<?xml version="1.0"?>
<package>
  <name>navigation</name>
  <version>0.0.0</version>
  <description>The navigation package</description>

  <maintainer email="cbandera@posteo.de">Claudio Bandera</maintainer>
  <maintainer email="Pio_Orzechowski@gmx.com">Piotr Orzechowski</maintainer>

  <url>https://wiki.kitcar-team.de/doku.php?id=konzept_und_umsetzung:navigation:start</url>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/navigation</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kitcar_cmake</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>common</build_depend>
  <build_depend>ceres_catkin</build_depend>

  <build_depend>state_estimation_msgs</build_depend>
  <build_depend>perception_msgs</build_depend>
  <build_depend>navigation_msgs</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>controller_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>longitudinal_controller_msgs</build_depend>
  <build_depend>lateral_controller_msgs</build_depend>


  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>common</run_depend>
  <run_depend>control</run_depend>
  <run_depend>ceres_catkin</run_depend>

  <run_depend>state_estimation_msgs</run_depend>
  <run_depend>perception_msgs</run_depend>
  <run_depend>navigation_msgs</run_depend>
  <run_depend>common_msgs</run_depend>
  <run_depend>controller_msgs</run_depend>
  <run_depend>longitudinal_controller_msgs</run_depend>
  <run_depend>lateral_controller_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>car_specs</run_depend>

  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
    <rosdoc config="rosdoc.yaml" />
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
