<?xml version="1.0"?>
<package>
  <name>state_estimation</name>
  <version>0.0.1</version>
  <description>The state_estimation package contains the kalman filter which estimates the state from the sensor readings.</description>

  <maintainer email="marek@wehmermail.net">Marek Wehmer</maintainer>

  <url>https://wiki.kitcar-team.de/doku.php?id=konzept_und_umsetzung:state_estimation:start</url>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <url type="website">http://git.kitcar-team.de</url>
  <author email="marek@wehmermail.net">Marek Wehmer</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kitcar_cmake</build_depend>
  <build_depend>common</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>state_estimation_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>controller_msgs</run_depend>
  <run_depend>common</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>state_estimation_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>car_specs</run_depend>
  <run_depend>nodelet</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
