<package>
  <name>common_msgs</name>
  <version>0.9.0</version>
  <description>
    ROS messages for custom messages published by all nodes.
  </description>
  <maintainer email="cbandera@posteo.de">Claudio Bandera</maintainer>
  <author>Claudio Bandera</author>
  <license>TODO</license>

  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kitcar_cmake</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
