<package>
  <name>lateral_controller_msgs</name>
  <version>0.9.0</version>
  <description>
    control messages from the lateral controller
  </description>
  <maintainer email="sonnentau.koenig@gmail.com">Jakob Wandel</maintainer>
  <author>Jakob Wandel</author>
  <license>TODO</license>

  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kitcar_cmake</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>

