<package>
  <name>perception_msgs</name>
  <version>0.9.0</version>
  <description>
    ROS messages for custom messages published by the perception nodes.
  </description>
  <maintainer email="christopher.wecht@student.kit.edu">Christopher Wecht</maintainer>
  <author>Piotr Orzechowski</author>
  <license>TODO</license>

  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kitcar_cmake</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
</package>
