<package>
  <name>pixelwise_mask_generation_msgs</name>
  <version>0.9.0</version>
  <description>
    ROS services for controlling the pixelwise mask generation
  </description>
  <maintainer email="j.truetsch@gmx.de">Julian Truetsch</maintainer>
  <author>Julian Truetsch</author>
  <license>TODO</license>

  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kitcar_cmake</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
