<package>
  <name>state_estimation_msgs</name>
  <version>0.9.0</version>
  <description>
    ROS messages for state estimation data.
  </description>
  <maintainer email="Pio_Orzechowski@gmx.com">Piotr Orzechowski</maintainer>
  <author>Piotr Orzechowski</author>
  <license>TODO</license>

  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>kitcar_cmake</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>controller_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>common_msgs</run_depend>
  <run_depend>controller_msgs</run_depend>
  
</package>
